# felix-tm

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  SECURITY.md  entry.py  pyproject.toml
.claude/skills/felix-tm-reload/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  verification-drive-file.md
docs/privacy/: index.html
felix_tm/: __init__.py  __main__.py  cli.py
felix_tm/core/: distance.py  match_maker.py  placement.py  segment.py
felix_tm/io/: tmx.py  tsv.py  xliff.py  xlsx.py
felix_tm/memory/: record.py  search.py  store.py
felix_tm/web/: app.py
plugins/chrome-extension/: background.js  content.js  db.js  felix-engine.js  manage.html  manage.js  manifest.json  package.json  picker.html  picker.js  sidepanel.html  sidepanel.js
plugins/chrome-extension/tests/: auto-translate.test.js  bench_dp.mjs  bench_search.mjs  cell-write-scenarios.test.js  distance.test.js  ja-en-scenarios.test.js  normalization.test.js  plan-consumers.test.js  qc.test.js  search-replace.test.js  search.test.js  tmx.test.js  (+1 more)
plugins/google-sheets/: .clasp.json  FelixTM.js  SETUP.md  Settings.html  Sidebar.html
samples/: README-tester.md  sample-glossary.tsv  sample-tm.tmx
scripts/: build_extension.py  generate_extension_key.py
scripts/verification/: brand-verification-checklist.md  casa-tier2-draft.md  demo-video-script.md  github-pages-setup.md  oauth-production-submission.md  scope-justification.md  web-store-listing.md  手順-日本語.md
tests/: bench_search.py  test_distance.py  test_integration.py  test_placement.py  test_segment.py
