[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "felix-tm"
version = "0.1.0"
description = "Cross-platform Translation Memory engine inspired by Felix CAT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ibushimaru" },
]
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
felix-tm = "felix_tm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
