[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "felix-tm"
version = "0.1.0"
description = "Cross-platform Translation Memory engine inspired by Felix CAT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ibushimaru", email = "ibushimaru@veriscio.com" },
]
dependencies = [
    "openpyxl>=3.1",
]

[project.urls]
Repository = "https://github.com/ibushimaru/felix-tm"
"Original Felix CAT (archived)" = "https://web.archive.org/web/20190729035158/https://bitbucket.org/ginstrom/felix"
"Felix CAT Website" = "http://felix-cat.com/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
felix-tm = "felix_tm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
